    * added examples/dc1394_multiview.c to test/demonstrate multicapture
      over multiple ports.
	  
Fri July 28 00:26:00 2002 <dan@dennedy.org>
    * dc1394_capture.c: added drop_frames boolean to
      dc1394_dma_setup_capture().
    * bumped versions to 0.9 since interface has changed some.
      Correct libtool versions:
	    major=9, interface changed
		revision=0, first implementation of this interface
	    age=0 for no backwards compatibilty
    * examples/dc1394_multicapture: added drop_frames support, cleanup.

Wed Aug  7 17:08:31 2002 <ddouxchamps@users.sf.net>
    * added several format7 functions for IIDC 1.30 compatibility.
    * first quick hack of IIDC 1.30 handshaking for byte-per-packet
      setting in format7. This happens in _dc1394_basic_format7_setup.

Tue Aug 20 10:40:12 2002 <ddouxchamps@users.sf.net>
    * added support for Point Grey cameras, which support IIDC with
      a little tweak (modifications in dc1394_is_camera).

Thu Aug 22 10:10:00 2002 <ddouxchamps@users.sf.net>
    * Updated support for PointGrey cameras (added the 0x800002
      software revision code)
	
Thu Sep 03 10:45:00 2002 <ddouxchamps@users.sf.net>
    * Bugfix in v1.30 format7 capture handshake. Thanks to Yasutoshi Onishi
      for pointing it out.

Thu Sep 09 12:00:00 2002 <ddouxchamps@users.sf.net>
    * more v1.30 handshake update

Fri Sep 10-11 12:00:00 2002 <ddouxchamps@users.sf.net>
    * even more v1.30 handshake update (now with proper error handling)

Sun Sep 22 17:30:00 2002 <ddouxchamps@users.sf.net>
    * added absolute feature setting functions. This is a first hack. 

Mon Sep 23 10:10:00 2002 <ddouxchamps@users.sf.net>
    * debugged absolute settings. Tested for shutter without problems.

Fri Sep 27 13:00:00 2002 <ddouxchamps@users.sf.net>
    * more v1.30 handshake update to handle backward compatibility
      with v1.20

Fri Oct 22 15:10:00 2002 <ddouxchamps@users.sf.net>
    * applied Christophe Achard patch, with some modifications.